--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Homepage</title>
+  <title>Tweets Page</title>
 </head>
 <body>
-  <h1>Welcome to My Homepage</h1>
-  <p>This is the main homepage of my simple HTML project.</p>
+  <h1>Embedded Tweet</h1>
+  <p>Here’s an example of an embedded tweet:</p>
 
-  <h2>Check Out My Tweets</h2>
-  <p>
-    If you’d like to see some tweets I’ve embedded, click the link below:
-  </p>
-  <a href="tweets.html">Go to Tweets Page</a>
+  <!-- Replace the URL with any tweet you want -->
+  <blockquote class="twitter-tweet">
+    <p lang="en" dir="ltr">
+      Just setting up my twttr
+    </p>&mdash; jack (@jack)
+    <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
+  </blockquote>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <h2>Back to Homepage</h2>
+  <a href="index.html">Return to Homepage</a>
 </body>
 </html>
