--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -21,5 +21,6 @@
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
   <p>Click the logo above to visit the ALX Africa website.</p>
+  <a href="tweets.html">Go to Tweets Page</a>
 </body>
 </html>
