--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,21 +6,41 @@
   <title>Base Index</title>
 </head>
 <body>
-  <h1>Welcome to My Page</h1>
-  <p>This is the first paragraph, introducing the content of this simple webpage.</p>
-  <p>The second paragraph gives more details about the purpose of the page and its structure.</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h2>About This Project</h2>
-  <p>The third paragraph explains that we are practicing basic HTML elements like headings, paragraphs, and images.</p>
+  <main>
+    <article>
+      <h1>Welcome to My Page</h1>
+      <p>This is the first paragraph, introducing the content of this simple webpage.</p>
+      <p>The second paragraph gives more details about the purpose of the page and its structure.</p>
 
-  <h3>Future Improvements</h3>
-  <p>The fourth paragraph highlights that later we can add lists, links, tables, and more advanced features.</p>
+      <h2>About This Project</h2>
+      <p>The third paragraph explains that we are practicing basic HTML elements like headings, paragraphs, and images.</p>
 
-  <h2>Clickable Image Example</h2>
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-  <p>Click the logo above to visit the ALX Africa website.</p>
-  <a href="tweets.html">Go to Tweets Page</a>
+      <h3>Future Improvements</h3>
+      <p>The fourth paragraph highlights that later we can add lists, links, tables, and more advanced features.</p>
+
+      <h2>Clickable Image Example</h2>
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+      <p>Click the logo above to visit the ALX Africa website.</p>
+      <a href="tweets.html">Go to Tweets Page</a>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by pello kwemoi - <a href="https://example.com" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
+
