--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,19 +6,35 @@
   <title>Tweets Page</title>
 </head>
 <body>
-  <h1>Embedded Tweet</h1>
-  <p>Here’s an example of an embedded tweet:</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <!-- Replace the URL with any tweet you want -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">
-      Just setting up my twttr
-    </p>&mdash; jack (@jack)
-    <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <h1>My Favorite Tweets</h1>
 
-  <h2>Back to Homepage</h2>
-  <a href="index.html">Return to Homepage</a>
+      <!-- Example embedded tweet -->
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Learning HTML step by step feels amazing! 🚀</p>
+        &mdash; Web Learner (@weblearner) 
+        <a href="https://twitter.com/weblearner/status/1234567890">March 21, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <p><a href="index.html">Go back to Homepage</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by YOUR NAME - <a href="https://example.com" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
