--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -31,6 +31,40 @@
       </a>
       <p>Click the logo above to visit the ALX Africa website.</p>
       <a href="tweets.html">Go to Tweets Page</a>
+
+      <!-- Learners Table -->
+      <h2>Learners Information</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <aside>
@@ -39,8 +73,7 @@
   </main>
 
   <footer>
-    <p>Made by pello kwemoi - <a href="https://example.com" target="_blank">here</a>.</p>
+    <p>Made by YOUR NAME - <a href="https://example.com" target="_blank">here</a>.</p>
   </footer>
 </body>
 </html>
-
